--- a/public/index.html
+++ b/public/index.html
@@ -15,22 +15,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Favicons - Place favicon.ico in the root directory -->
-  <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/assets/img/favicons/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/assets/img/favicons/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/assets/img/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/assets/img/favicons/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/assets/img/favicons/favicon-16x16.png">
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://www.vincentselvakumar.org/assets/img/favicons/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="https://www.vincentselvakumar.org/assets/img/favicons/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://www.vincentselvakumar.org/assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://www.vincentselvakumar.org/assets/img/favicons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.vincentselvakumar.org/assets/img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="https://www.vincentselvakumar.org/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="%PUBLIC_URL%/assets/img/favicons/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="https://www.vincentselvakumar.org/assets/img/favicons/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
   <!--==============================
@@ -48,17 +48,17 @@
 	    All CSS File
 	============================== -->
   <!-- Bootstrap -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://www.vincentselvakumar.org/assets/css/bootstrap.min.css">
   <!-- Fontawesome Icon -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/fontawesome.min.css">
+  <link rel="stylesheet" href="https://www.vincentselvakumar.org/assets/css/fontawesome.min.css">
   <!-- Magnific Popup -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/magnific-popup.min.css">
+  <link rel="stylesheet" href="https://www.vincentselvakumar.org/assets/css/magnific-popup.min.css">
 
   <!-- Swiper css -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/swiper-bundle.min.css">
+  <link rel="stylesheet" href="https://www.vincentselvakumar.org/assets/css/swiper-bundle.min.css">
 
   <!-- Theme Custom CSS -->
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
+  <link rel="stylesheet" href="https://www.vincentselvakumar.org/assets/css/style.css">
 
 </head>
 
